Add Webapp archetype.

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <modules>
         <module>ymate-archetype-module</module>
         <module>ymate-archetype-quickstart</module>
+        <module>ymate-archetype-webapp</module>
     </modules>
 
     <developers>
