--- a/ymate-archetype-webapp/pom.xml
+++ b/ymate-archetype-webapp/pom.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>net.ymate.maven.archetypes</groupId>
         <artifactId>ymate-maven-archetypes</artifactId>
+        <groupId>net.ymate.maven.archetypes</groupId>
         <version>1.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ymate-archetype-quickstart</artifactId>
+    <artifactId>ymate-archetype-webapp</artifactId>
     <packaging>maven-archetype</packaging>
 
-    <name>ymate-archetype-quickstart</name>
+    <name>ymate-archetype-webapp</name>
     <url>https://www.ymate.net/</url>
-    <description>YMP Quickstart Archetype</description>
+    <description>YMP Webapp Archetype</description>
 
     <build>
         <extensions>
