Update configuration files and templates.

--- a/ymate-archetype-webapp/src/main/resources/archetype-resources/src/main/resources/ymp-conf.properties
+++ b/ymate-archetype-webapp/src/main/resources/archetype-resources/src/main/resources/ymp-conf.properties
@@ -315,3 +315,101 @@ ${symbol_pound}ymp.params.webmvc.validation_template_item=
 
 ${symbol_pound} ${symbol_escape}u5141${symbol_escape}u8BB8${symbol_escape}u4E0A${symbol_escape}u4F20${symbol_escape}u7684${symbol_escape}u6587${symbol_escape}u4EF6${symbol_escape}u7C7B${symbol_escape}u578B, ${symbol_escape}u591A${symbol_escape}u4E2A${symbol_escape}u7528'|'${symbol_escape}u5206${symbol_escape}u9694, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A(${symbol_escape}u8868${symbol_escape}u793A${symbol_escape}u4E0D${symbol_escape}u9650${symbol_escape}u5236)
 ${symbol_pound}ymp.params.webmvc.allowed_upload_content_types=
+
+${symbol_pound}-------------------------------------
+${symbol_pound} JDBC${symbol_escape}u6301${symbol_escape}u4E45${symbol_escape}u5316${symbol_escape}u6A21${symbol_escape}u5757${symbol_escape}u521D${symbol_escape}u59CB${symbol_escape}u5316${symbol_escape}u53C2${symbol_escape}u6570
+${symbol_pound}-------------------------------------
+
+${symbol_pound} ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u6E90${symbol_escape}u540D${symbol_escape}u79F0, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: default
+${symbol_pound}ymp.configs.persistence.jdbc.ds_default_name=
+
+${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u6E90${symbol_escape}u5217${symbol_escape}u8868, ${symbol_escape}u591A${symbol_escape}u4E2A${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u6E90${symbol_escape}u540D${symbol_escape}u79F0${symbol_escape}u95F4${symbol_escape}u7528'|'${symbol_escape}u5206${symbol_escape}u9694, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: default
+${symbol_pound}ymp.configs.persistence.jdbc.ds_name_list=
+
+${symbol_pound} ${symbol_escape}u662F${symbol_escape}u5426${symbol_escape}u663E${symbol_escape}u793A${symbol_escape}u6267${symbol_escape}u884C${symbol_escape}u7684SQL${symbol_escape}u8BED${symbol_escape}u53E5, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: false
+${symbol_pound}ymp.configs.persistence.jdbc.ds.default.show_sql=true
+
+${symbol_pound} ${symbol_escape}u662F${symbol_escape}u5426${symbol_escape}u5F00${symbol_escape}u542F${symbol_escape}u5806${symbol_escape}u6808${symbol_escape}u8DDF${symbol_escape}u8E2A, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: false
+${symbol_pound}ymp.configs.persistence.jdbc.ds.default.stack_traces=true
+
+${symbol_pound} ${symbol_escape}u5806${symbol_escape}u6808${symbol_escape}u8DDF${symbol_escape}u8E2A${symbol_escape}u5C42${symbol_escape}u7EA7${symbol_escape}u6DF1${symbol_escape}u5EA6, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: 0(${symbol_escape}u5373${symbol_escape}u5168${symbol_escape}u90E8)
+${symbol_pound}ymp.configs.persistence.jdbc.ds.default.stack_trace_depth=
+
+${symbol_pound} ${symbol_escape}u5806${symbol_escape}u6808${symbol_escape}u8DDF${symbol_escape}u8E2A${symbol_escape}u5305${symbol_escape}u540D${symbol_escape}u524D${symbol_escape}u7F00${symbol_escape}u8FC7${symbol_escape}u6EE4, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
+${symbol_pound}ymp.configs.persistence.jdbc.ds.default.stack_trace_package=${package}
+
+${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u8868${symbol_escape}u524D${symbol_escape}u7F00${symbol_escape}u540D${symbol_escape}u79F0, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
+${symbol_pound}ymp.configs.persistence.jdbc.ds.default.table_prefix=
+
+${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u6E90${symbol_escape}u9002${symbol_escape}u914D${symbol_escape}u5668, ${symbol_escape}u53EF${symbol_escape}u9009${symbol_escape}u503C${symbol_escape}u4E3A${symbol_escape}u5DF2${symbol_escape}u77E5${symbol_escape}u9002${symbol_escape}u914D${symbol_escape}u5668${symbol_escape}u540D${symbol_escape}u79F0${symbol_escape}u6216${symbol_escape}u81EA${symbol_escape}u5B9A${symbol_escape}u4E49${symbol_escape}u9002${symbol_escape}u914D${symbol_escape}u7F6E${symbol_escape}u7C7B${symbol_escape}u540D${symbol_escape}u79F0, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: default, ${symbol_escape}u76EE${symbol_escape}u524D${symbol_escape}u652F${symbol_escape}u6301${symbol_escape}u5DF2${symbol_escape}u77E5${symbol_escape}u9002${symbol_escape}u914D${symbol_escape}u5668[default|dbcp|c3p0|jndi|...]
+${symbol_pound}ymp.configs.persistence.jdbc.ds.default.adapter_class=dbcp
+
+${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u7C7B${symbol_escape}u578B, ${symbol_escape}u53EF${symbol_escape}u9009${symbol_escape}u53C2${symbol_escape}u6570, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C${symbol_escape}u5C06${symbol_escape}u901A${symbol_escape}u8FC7${symbol_escape}u8FDE${symbol_escape}u63A5${symbol_escape}u5B57${symbol_escape}u7B26${symbol_escape}u4E32${symbol_escape}u5206${symbol_escape}u6790${symbol_escape}u83B7${symbol_escape}u5F97, ${symbol_escape}u76EE${symbol_escape}u524D${symbol_escape}u652F${symbol_escape}u6301[mysql|oracle|sqlserver|db2|sqlite|postgresql|hsqldb|h2]
+${symbol_pound}ymp.configs.persistence.jdbc.ds.default.type=
+
+${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u65B9${symbol_escape}u8A00, ${symbol_escape}u53EF${symbol_escape}u9009${symbol_escape}u53C2${symbol_escape}u6570, ${symbol_escape}u81EA${symbol_escape}u5B9A${symbol_escape}u4E49${symbol_escape}u65B9${symbol_escape}u8A00${symbol_escape}u5C06${symbol_escape}u8986${symbol_escape}u76D6${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u914D${symbol_escape}u7F6E
+${symbol_pound}ymp.configs.persistence.jdbc.ds.default.dialect_class=
+
+${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u8FDE${symbol_escape}u63A5${symbol_escape}u9A71${symbol_escape}u52A8, ${symbol_escape}u53EF${symbol_escape}u9009${symbol_escape}u53C2${symbol_escape}u6570, ${symbol_escape}u6846${symbol_escape}u67B6${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u5C06${symbol_escape}u6839${symbol_escape}u636E${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u7C7B${symbol_escape}u578B${symbol_escape}u8FDB${symbol_escape}u884C${symbol_escape}u81EA${symbol_escape}u52A8${symbol_escape}u5339${symbol_escape}u914D
+${symbol_pound}ymp.configs.persistence.jdbc.ds.default.driver_class=
+
+${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u8FDE${symbol_escape}u63A5${symbol_escape}u5B57${symbol_escape}u7B26${symbol_escape}u4E32, ${symbol_escape}u5FC5${symbol_escape}u586B${symbol_escape}u53C2${symbol_escape}u6570
+ymp.configs.persistence.jdbc.ds.default.connection_url=jdbc:mysql://localhost:3306/db_name?useUnicode=true&useSSL=false&characterEncoding=UTF-8
+
+${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u8BBF${symbol_escape}u95EE${symbol_escape}u7528${symbol_escape}u6237${symbol_escape}u540D${symbol_escape}u79F0, ${symbol_escape}u5FC5${symbol_escape}u586B${symbol_escape}u53C2${symbol_escape}u6570
+ymp.configs.persistence.jdbc.ds.default.username=root
+
+${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u8BBF${symbol_escape}u95EE${symbol_escape}u5BC6${symbol_escape}u7801, ${symbol_escape}u53EF${symbol_escape}u9009${symbol_escape}u53C2${symbol_escape}u6570, ${symbol_escape}u7ECF${symbol_escape}u8FC7${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u5BC6${symbol_escape}u7801${symbol_escape}u5904${symbol_escape}u7406${symbol_escape}u5668${symbol_escape}u52A0${symbol_escape}u5BC6${symbol_escape}u540E${symbol_escape}u7684admin${symbol_escape}u5B57${symbol_escape}u7B26${symbol_escape}u4E32${symbol_escape}u4E3AwRI2rASW58E
+ymp.configs.persistence.jdbc.ds.default.password=wRI2rASW58E
+
+${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u8BBF${symbol_escape}u95EE${symbol_escape}u5BC6${symbol_escape}u7801${symbol_escape}u662F${symbol_escape}u5426${symbol_escape}u5DF2${symbol_escape}u52A0${symbol_escape}u5BC6, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: false
+ymp.configs.persistence.jdbc.ds.default.password_encrypted=true
+
+${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u5BC6${symbol_escape}u7801${symbol_escape}u5904${symbol_escape}u7406${symbol_escape}u5668, ${symbol_escape}u53EF${symbol_escape}u9009${symbol_escape}u53C2${symbol_escape}u6570, ${symbol_escape}u7528${symbol_escape}u4E8E${symbol_escape}u5BF9${symbol_escape}u5DF2${symbol_escape}u52A0${symbol_escape}u5BC6${symbol_escape}u7801${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u8BBF${symbol_escape}u95EE${symbol_escape}u5BC6${symbol_escape}u7801${symbol_escape}u8FDB${symbol_escape}u884C${symbol_escape}u89E3${symbol_escape}u5BC6, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
+${symbol_pound}ymp.configs.persistence.jdbc.ds.default.password_class=
+
+${symbol_pound}-------------------------------------
+${symbol_pound} JDBC${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5B9E${symbol_escape}u4F53${symbol_escape}u4EE3${symbol_escape}u7801${symbol_escape}u751F${symbol_escape}u6210${symbol_escape}u5668${symbol_escape}u914D${symbol_escape}u7F6E${symbol_escape}u53C2${symbol_escape}u6570
+${symbol_pound}-------------------------------------
+
+${symbol_pound} ${symbol_escape}u662F${symbol_escape}u5426${symbol_escape}u751F${symbol_escape}u6210${symbol_escape}u65B0${symbol_escape}u7684BaseEntity${symbol_escape}u7C7B, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: false(${symbol_escape}u5373${symbol_escape}u8868${symbol_escape}u793A${symbol_escape}u4F7F${symbol_escape}u7528${symbol_escape}u6846${symbol_escape}u67B6${symbol_escape}u63D0${symbol_escape}u4F9B${symbol_escape}u7684BaseEntity${symbol_escape}u7C7B)
+${symbol_pound}ymp.params.jdbc.use_base_entity=
+
+${symbol_pound} ${symbol_escape}u662F${symbol_escape}u5426${symbol_escape}u4F7F${symbol_escape}u7528${symbol_escape}u7C7B${symbol_escape}u540D${symbol_escape}u540E${symbol_escape}u7F00, ${symbol_escape}u4E0D${symbol_escape}u4F7F${symbol_escape}u7528${symbol_escape}u548C${symbol_escape}u4F7F${symbol_escape}u7528${symbol_escape}u7684${symbol_escape}u533A${symbol_escape}u522B${symbol_escape}u5982: User->UserModel, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: false
+ymp.params.jdbc.use_class_suffix=true
+
+${symbol_pound} ${symbol_escape}u5B9E${symbol_escape}u4F53${symbol_escape}u7C7B${symbol_escape}u540D${symbol_escape}u540E${symbol_escape}u7F00, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: model
+${symbol_pound}ymp.params.jdbc.class_suffix=entity
+
+${symbol_pound} ${symbol_escape}u662F${symbol_escape}u5426${symbol_escape}u91C7${symbol_escape}u7528${symbol_escape}u94FE${symbol_escape}u5F0F${symbol_escape}u8C03${symbol_escape}u7528${symbol_escape}u6A21${symbol_escape}u5F0F, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: false
+ymp.params.jdbc.use_chain_mode=true
+
+${symbol_pound} ${symbol_escape}u662F${symbol_escape}u5426${symbol_escape}u6DFB${symbol_escape}u52A0${symbol_escape}u7C7B${symbol_escape}u6210${symbol_escape}u5458${symbol_escape}u5C5E${symbol_escape}u6027${symbol_escape}u503C${symbol_escape}u72B6${symbol_escape}u6001${symbol_escape}u53D8${symbol_escape}u5316${symbol_escape}u6CE8${symbol_escape}u89E3, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: false
+ymp.params.jdbc.use_state_support=true
+
+${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u540D${symbol_escape}u79F0, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
+${symbol_pound}ymp.params.jdbc.db_name=
+
+${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u7528${symbol_escape}u6237${symbol_escape}u540D${symbol_escape}u79F0, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
+${symbol_pound}ymp.params.jdbc.db_username=
+
+${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u8868${symbol_escape}u540D${symbol_escape}u79F0${symbol_escape}u524D${symbol_escape}u7F00, ${symbol_escape}u591A${symbol_escape}u4E2A${symbol_escape}u7528'|'${symbol_escape}u5206${symbol_escape}u9694, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
+${symbol_pound}ymp.params.jdbc.table_prefix=
+
+${symbol_pound} ${symbol_escape}u5426${symbol_escape}u5254${symbol_escape}u9664${symbol_escape}u751F${symbol_escape}u6210${symbol_escape}u7684${symbol_escape}u5B9E${symbol_escape}u4F53${symbol_escape}u6620${symbol_escape}u5C04${symbol_escape}u8868${symbol_escape}u540D${symbol_escape}u524D${symbol_escape}u7F00, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: false
+ymp.params.jdbc.remove_table_prefix=true
+
+${symbol_pound} ${symbol_escape}u9884${symbol_escape}u751F${symbol_escape}u6210${symbol_escape}u5B9E${symbol_escape}u4F53${symbol_escape}u7684${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u8868${symbol_escape}u540D${symbol_escape}u79F0${symbol_escape}u5217${symbol_escape}u8868, ${symbol_escape}u591A${symbol_escape}u4E2A${symbol_escape}u7528'|'${symbol_escape}u5206${symbol_escape}u9694, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A(${symbol_escape}u5373${symbol_escape}u5168${symbol_escape}u90E8${symbol_escape}u751F${symbol_escape}u6210)
+${symbol_pound}ymp.params.jdbc.table_list=
+
+${symbol_pound} ${symbol_escape}u6392${symbol_escape}u9664${symbol_escape}u7684${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u8868${symbol_escape}u540D${symbol_escape}u79F0${symbol_escape}u5217${symbol_escape}u8868, ${symbol_escape}u5728${symbol_escape}u6B64${symbol_escape}u5217${symbol_escape}u8868${symbol_escape}u5185${symbol_escape}u7684${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u8868${symbol_escape}u5C06${symbol_escape}u4E0D${symbol_escape}u88AB${symbol_escape}u751F${symbol_escape}u6210${symbol_escape}u5B9E${symbol_escape}u4F53, ${symbol_escape}u591A${symbol_escape}u4E2A${symbol_escape}u7528'|'${symbol_escape}u5206${symbol_escape}u9694, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
+${symbol_pound}ymp.params.jdbc.table_exclude_list=
+
+${symbol_pound} ${symbol_escape}u9700${symbol_escape}u8981${symbol_escape}u6DFB${symbol_escape}u52A0@Readonly${symbol_escape}u6CE8${symbol_escape}u89E3${symbol_escape}u58F0${symbol_escape}u660E${symbol_escape}u7684${symbol_escape}u5B57${symbol_escape}u6BB5${symbol_escape}u540D${symbol_escape}u79F0${symbol_escape}u5217${symbol_escape}u8868, ${symbol_escape}u591A${symbol_escape}u4E2A${symbol_escape}u7528'|'${symbol_escape}u5206${symbol_escape}u9694, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
+${symbol_pound}ymp.params.jdbc.readonly_field_list=
+
+${symbol_pound} ${symbol_escape}u751F${symbol_escape}u6210${symbol_escape}u7684${symbol_escape}u4EE3${symbol_escape}u7801${symbol_escape}u6587${symbol_escape}u4EF6${symbol_escape}u8F93${symbol_escape}u51FA${symbol_escape}u8DEF${symbol_escape}u5F84, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_dollar}{root}/src/main/java
+${symbol_pound}ymp.params.jdbc.output_path=
+
+${symbol_pound} ${symbol_escape}u751F${symbol_escape}u6210${symbol_escape}u7684${symbol_escape}u4EE3${symbol_escape}u7801${symbol_escape}u6240${symbol_escape}u5C5E${symbol_escape}u5305${symbol_escape}u540D${symbol_escape}u79F0, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: packages
+ymp.params.jdbc.package_name=${package}
