--- a/ymate-archetype-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/ymate-archetype-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -205,6 +205,23 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <!--
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.48</version>
+        </dependency>
+        <dependency>
+            <groupId>net.ymate.platform</groupId>
+            <artifactId>ymate-platform-persistence-jdbc</artifactId>
+            <version>${ymate.platform.version}</version>
+        </dependency>
+        -->
         <dependency>
             <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-starter</artifactId>
