--- a/ymate-archetype-webapp/src/main/resources/archetype-resources/pom.xml
+++ b/ymate-archetype-webapp/src/main/resources/archetype-resources/pom.xml
@@ -76,6 +76,23 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+        <!--
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.48</version>
+        </dependency>
+        <dependency>
+            <groupId>net.ymate.platform</groupId>
+            <artifactId>ymate-platform-persistence-jdbc</artifactId>
+            <version>${ymate.platform.version}</version>
+        </dependency>
+        -->
         <dependency>
             <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-starter</artifactId>
