Update configuration file templates.

--- a/ymate-archetype-module/src/main/resources/archetype-resources/__rootArtifactId__-starter/src/main/resources/ymp-conf.properties
+++ b/ymate-archetype-module/src/main/resources/archetype-resources/__rootArtifactId__-starter/src/main/resources/ymp-conf.properties
@@ -137,7 +137,7 @@ ${symbol_pound} ${symbol_escape}u5806${symbol_escape}u6808${symbol_escape}u8DDF$
 ${symbol_pound}ymp.configs.persistence.jdbc.ds.default.stack_trace_depth=
 
 ${symbol_pound} ${symbol_escape}u5806${symbol_escape}u6808${symbol_escape}u8DDF${symbol_escape}u8E2A${symbol_escape}u5305${symbol_escape}u540D${symbol_escape}u524D${symbol_escape}u7F00${symbol_escape}u8FC7${symbol_escape}u6EE4, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
-${symbol_pound}ymp.configs.persistence.jdbc.ds.default.stack_trace_package=${package}
+${symbol_pound}ymp.configs.persistence.jdbc.ds.default.stack_trace_packages=${package}
 
 ${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u8868${symbol_escape}u524D${symbol_escape}u7F00${symbol_escape}u540D${symbol_escape}u79F0, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
 ${symbol_pound}ymp.configs.persistence.jdbc.ds.default.table_prefix=
