--- a/ymate-archetype-webapp/src/main/resources/archetype-resources/src/main/resources/ymp-conf.properties
+++ b/ymate-archetype-webapp/src/main/resources/archetype-resources/src/main/resources/ymp-conf.properties
@@ -270,8 +270,11 @@ ${symbol_pound}ymp.configs.webmvc.cross_domain_allowed_origins=
 ${symbol_pound} ${symbol_escape}u5141${symbol_escape}u8BB8${symbol_escape}u8DE8${symbol_escape}u57DF${symbol_escape}u8BF7${symbol_escape}u6C42${symbol_escape}u7684${symbol_escape}u65B9${symbol_escape}u6CD5, ${symbol_escape}u591A${symbol_escape}u4E2A${symbol_escape}u65B9${symbol_escape}u6CD5${symbol_escape}u540D${symbol_escape}u79F0${symbol_escape}u7528'|'${symbol_escape}u5206${symbol_escape}u9694, ${symbol_escape}u53EF${symbol_escape}u9009${symbol_escape}u53C2${symbol_escape}u6570, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
 ${symbol_pound}ymp.configs.webmvc.cross_domain_allowed_methods=
 
-${symbol_pound} ${symbol_escape}u5141${symbol_escape}u8BB8${symbol_escape}u8DE8${symbol_escape}u57DF${symbol_escape}u8BF7${symbol_escape}u6C42${symbol_escape}u643A${symbol_escape}u5E26${symbol_escape}u7684${symbol_escape}u8BF7${symbol_escape}u6C42${symbol_escape}u5934, ${symbol_escape}u591A${symbol_escape}u4E2A${symbol_escape}u8BF7${symbol_escape}u6C42${symbol_escape}u5934${symbol_escape}u540D${symbol_escape}u79F0${symbol_escape}u7528'|'${symbol_escape}u5206${symbol_escape}u9694, ${symbol_escape}u53EF${symbol_escape}u9009${symbol_escape}u53C2${symbol_escape}u6570, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
+${symbol_pound} ${symbol_escape}u5141${symbol_escape}u8BB8${symbol_escape}u8DE8${symbol_escape}u57DF${symbol_escape}u8BF7${symbol_escape}u6C42${symbol_escape}u643A${symbol_escape}u5E26${symbol_escape}u7684Header${symbol_escape}u4FE1${symbol_escape}u606F, ${symbol_escape}u591A${symbol_escape}u4E2AHeader${symbol_escape}u540D${symbol_escape}u79F0${symbol_escape}u7528'|'${symbol_escape}u5206${symbol_escape}u9694, ${symbol_escape}u53EF${symbol_escape}u9009${symbol_escape}u53C2${symbol_escape}u6570, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
 ${symbol_pound}ymp.configs.webmvc.cross_domain_allowed_headers=
+
+${symbol_pound} ${symbol_escape}u5141${symbol_escape}u8BB8${symbol_escape}u8DE8${symbol_escape}u57DF${symbol_escape}u8BBF${symbol_escape}u95EE${symbol_escape}u7684Header${symbol_escape}u4FE1${symbol_escape}u606F, ${symbol_escape}u591A${symbol_escape}u4E2AHeader${symbol_escape}u540D${symbol_escape}u79F0${symbol_escape}u7528'|'${symbol_escape}u5206${symbol_escape}u9694, ${symbol_escape}u53EF${symbol_escape}u9009${symbol_escape}u53C2${symbol_escape}u6570, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
+${symbol_pound}ymp.configs.webmvc.cross_domain_exposed_headers=
 
 ${symbol_pound} ${symbol_escape}u662F${symbol_escape}u5426${symbol_escape}u5141${symbol_escape}u8BB8${symbol_escape}u8DE8${symbol_escape}u57DF${symbol_escape}u8BF7${symbol_escape}u6C42${symbol_escape}u5E26${symbol_escape}u6709${symbol_escape}u9A8C${symbol_escape}u8BC1${symbol_escape}u4FE1${symbol_escape}u606F, ${symbol_escape}u53EF${symbol_escape}u9009${symbol_escape}u53C2${symbol_escape}u6570, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: false
 ${symbol_pound}ymp.configs.webmvc.cross_domain_allowed_credentials=
@@ -330,7 +333,7 @@ ${symbol_pound} ${symbol_escape}u5806${symbol_escape}u6808${symbol_escape}u8DDF$
 ${symbol_pound}ymp.configs.persistence.jdbc.ds.default.stack_trace_depth=
 
 ${symbol_pound} ${symbol_escape}u5806${symbol_escape}u6808${symbol_escape}u8DDF${symbol_escape}u8E2A${symbol_escape}u5305${symbol_escape}u540D${symbol_escape}u524D${symbol_escape}u7F00${symbol_escape}u8FC7${symbol_escape}u6EE4, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
-${symbol_pound}ymp.configs.persistence.jdbc.ds.default.stack_trace_package=${package}
+${symbol_pound}ymp.configs.persistence.jdbc.ds.default.stack_trace_packages=${package}
 
 ${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u8868${symbol_escape}u524D${symbol_escape}u7F00${symbol_escape}u540D${symbol_escape}u79F0, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
 ${symbol_pound}ymp.configs.persistence.jdbc.ds.default.table_prefix=
