Add Microservice archetype.

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     </properties>
 
     <modules>
+        <module>ymate-archetype-microservice</module>
         <module>ymate-archetype-module</module>
         <module>ymate-archetype-quickstart</module>
         <module>ymate-archetype-webapp</module>
