--- a/ymate-archetype-module/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
+++ b/ymate-archetype-module/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
@@ -25,7 +25,9 @@
                     <!--
                     <exclude>**/ymp-*.properties</exclude>
                     -->
+                    <exclude>**/ymp-conf_DEV.properties</exclude>
                 </excludes>
+                <filtering>false</filtering>
             </resource>
         </resources>
         <pluginManagement>
