--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-impl/pom.xml
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-impl/pom.xml
@@ -16,6 +16,30 @@
     <url>http://www.ymate.net/</url>
     <description>YMP Microservice API Implementation Archetype</description>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <!--
+                    <exclude>**/ymp-*.properties</exclude>
+                    -->
+                    <exclude>**/ymp-conf_DEV.properties</exclude>
+                </excludes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+        <plugins>
+            <!--
+            <plugin>
+                <groupId>net.ymate.maven.plugins</groupId>
+                <artifactId>ymate-maven-plugin</artifactId>
+                <version>${ymate.maven.plugin.version}</version>
+            </plugin>
+            -->
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
