--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-starter/pom.xml
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-starter/pom.xml
@@ -17,6 +17,18 @@
     <description>YMP Microservice Starter Archetype</description>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <!--
+                    <exclude>**/ymp-*.properties</exclude>
+                    -->
+                    <exclude>**/ymp-conf_DEV.properties</exclude>
+                </excludes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
