--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-webstarter/pom.xml
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-webstarter/pom.xml
@@ -18,6 +18,18 @@
 
     <build>
         <finalName>${artifactId}-webstarter</finalName>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <!--
+                    <exclude>**/ymp-*.properties</exclude>
+                    -->
+                    <exclude>**/ymp-conf_DEV.properties</exclude>
+                </excludes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
     </build>
 
     <dependencies>
