--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/pom.xml
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/pom.xml
@@ -23,6 +23,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <ymate.platform.version>2.1.0</ymate.platform.version>
         <ymate.port.version>1.1-SNAPSHOT</ymate.port.version>
+        <ymate.maven.plugin.version>1.1-SNAPSHOT</ymate.maven.plugin.version>
     </properties>
 
     <!--
