--- a/ymate-archetype-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/ymate-archetype-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -110,6 +110,7 @@
                     <!--
                     <exclude>**/ymp-*.properties</exclude>
                     -->
+                    <exclude>**/ymp-conf_DEV.properties</exclude>
                 </excludes>
                 <filtering>false</filtering>
             </resource>
