--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-webstarter/pom.xml
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-webstarter/pom.xml
@@ -17,7 +17,7 @@
     <description>YMP Microservice WebStarter Archetype</description>
 
     <build>
-        <finalName>${artifactId}-webstarter</finalName>
+        <finalName>${artifactId}</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
