--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-api/src/main/resources/ymp-conf.properties
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-api/src/main/resources/ymp-conf.properties
@@ -191,6 +191,9 @@ ymp.params.jdbc.use_chain_mode=true
 ${symbol_pound} ${symbol_escape}u662F${symbol_escape}u5426${symbol_escape}u6DFB${symbol_escape}u52A0${symbol_escape}u7C7B${symbol_escape}u6210${symbol_escape}u5458${symbol_escape}u5C5E${symbol_escape}u6027${symbol_escape}u503C${symbol_escape}u72B6${symbol_escape}u6001${symbol_escape}u53D8${symbol_escape}u5316${symbol_escape}u6CE8${symbol_escape}u89E3, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: false
 ymp.params.jdbc.use_state_support=true
 
+${symbol_pound} ${symbol_escape}u81EA${symbol_escape}u5B9A${symbol_escape}u4E49${symbol_escape}u8868${symbol_escape}u6216${symbol_escape}u5B57${symbol_escape}u6BB5${symbol_escape}u540D${symbol_escape}u79F0${symbol_escape}u8FC7${symbol_escape}u6EE4${symbol_escape}u5668, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
+${symbol_pound}ymp.params.jdbc.named_filter_class=
+
 ${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u5E93${symbol_escape}u540D${symbol_escape}u79F0, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
 ${symbol_pound}ymp.params.jdbc.db_name=
 
