--- a/ymate-archetype-webapp/src/main/resources/archetype-resources/pom.xml
+++ b/ymate-archetype-webapp/src/main/resources/archetype-resources/pom.xml
@@ -107,12 +107,7 @@
         -->
         <dependency>
             <groupId>net.ymate.platform</groupId>
-            <artifactId>ymate-platform-starter</artifactId>
-            <version>${ymate.platform.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.ymate.platform</groupId>
-            <artifactId>ymate-platform-webmvc</artifactId>
+            <artifactId>ymate-platform-starter-web</artifactId>
             <version>${ymate.platform.version}</version>
         </dependency>
     </dependencies>
