--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-starter/pom.xml
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-starter/pom.xml
@@ -31,7 +31,9 @@
         </resources>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2.2</version>
                 <configuration>
                     <descriptors>
                         <descriptor>src/main/assembly/assembly.xml</descriptor>
@@ -56,11 +58,11 @@
         </dependency>
         <dependency>
             <groupId>net.ymate.platform</groupId>
-            <artifactId>ymate-platform-log</artifactId>
+            <artifactId>ymate-platform-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>net.ymate.port</groupId>
-            <artifactId>ymate-port-protocol-http</artifactId>
+            <artifactId>ymate-port-protocol-http-tomcat</artifactId>
         </dependency>
         <dependency>
             <groupId>${groupId}</groupId>
