--- a/ymate-archetype-module/src/main/resources/archetype-resources/pom.xml
+++ b/ymate-archetype-module/src/main/resources/archetype-resources/pom.xml
@@ -138,6 +138,7 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-archetype-plugin</artifactId>
                 <version>2.4</version>
             </plugin>
