--- a/ymate-archetype-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/ymate-archetype-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -173,6 +173,7 @@
             -->
 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-archetype-plugin</artifactId>
                 <version>2.4</version>
             </plugin>
