--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-impl/pom.xml
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-impl/pom.xml
@@ -13,7 +13,7 @@
     <packaging>jar</packaging>
 
     <name>${artifactId}</name>
-    <url>http://www.ymate.net/</url>
+    <url>https://www.ymate.net/</url>
     <description>YMP Microservice API Implementation Archetype</description>
 
     <build>
