--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/pom.xml
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/pom.xml
@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
 
     <name>${artifactId}</name>
-    <url>http://www.ymate.net/</url>
+    <url>https://www.ymate.net/</url>
     <description>YMP Microservice Parent Archetype</description>
 
     <modules>
