--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-webstarter/src/main/resources/ymp-conf.properties
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-webstarter/src/main/resources/ymp-conf.properties
@@ -24,7 +24,7 @@ ${symbol_pound} ${symbol_escape}u56FD${symbol_escape}u9645${symbol_escape}u5316$
 ${symbol_pound}ymp.default_locale=zh_CN
 
 ${symbol_pound} ${symbol_escape}u56FD${symbol_escape}u9645${symbol_escape}u5316${symbol_escape}u8D44${symbol_escape}u6E90${symbol_escape}u4E8B${symbol_escape}u4EF6${symbol_escape}u76D1${symbol_escape}u542C${symbol_escape}u5904${symbol_escape}u7406${symbol_escape}u5668, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
-ymp.i18n_event_handler_class=net.ymate.platform.webmvc.support.I18nWebEventHandler
+${symbol_pound}ymp.i18n_event_handler_class=
 
 ${symbol_pound} ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u5BC6${symbol_escape}u7801${symbol_escape}u5904${symbol_escape}u7406${symbol_escape}u5668, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: ${symbol_escape}u7A7A
 ${symbol_pound}ymp.default_password_process_class=
