--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
 
     <groupId>net.ymate.maven.archetypes</groupId>
     <artifactId>ymate-maven-archetypes</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>ymate-maven-archetypes</name>
-    <url>http://www.ymate.net/</url>
+    <url>https://www.ymate.net/</url>
     <description>YMP Maven Archetypes Parent.</description>
 
     <properties>
