--- a/ymate-archetype-quickstart/pom.xml
+++ b/ymate-archetype-quickstart/pom.xml
@@ -28,6 +28,7 @@
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-archetype-plugin</artifactId>
                     <version>2.4</version>
                 </plugin>
